--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "http://HarshBatra.github.io/peepthrough-website-ui-react",
+    "homepage": "https://HarshBatra.github.io/peepthrough-website-ui-react",
     "name": "peepthrough-website",
     "version": "0.1.0",
     "private": true,
